@@ -7,6 +7,12 @@ Next Release
 
 - Fixed a missing import in the blob cache cleanup code.
 
+- Added a --dry-run option to zodbpack.  Set it to force a dry run
+  of packing.
+
+- Improved the efficiency of packing databases that are both broad
+  and deep.
+
 1.5.0a1 (2010-10-21)
 --------------------
 
